add another template version

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-.idea
-.vs
-.vscode/settings.json
+!Update.ps1
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
 build
-cmake-build*
-SkyrimSE.code-workspace
-skyrimse.ppj
-mod/SleepGivesBuff/.vscode/*
+.clang-format
+.editorconfig
+.vscode
+.vs
