--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,9 @@
 [*]
 charset = utf-8
 insert_final_newline = true
-trim_trailing_whitespace = true
 
-[*.{h,cmake,cpp}]
-indent_style = space
+[*.{c,cmake,cpp,cxx,h,hpp,hxx}]
+indent_style = tab
 indent_size = 4
 
 [*.json]
